# tcc

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  meson.build
libtcc/: Correlator.cc  Correlator.h  CorrelatorKernel.cc  CorrelatorKernel.h  Kernel.cc  Kernel.h  TCCorrelator.cu  TCCorrelator.cu.orig
test/Common/: ComplexInt4.h  Config.h  Record.cc  Record.h  UnitTest.cc  UnitTest.h
test/CorrelatorTest/: CorrelatorTest.cc  CorrelatorTest.h  Options.cc  Options.h
test/OpenCLCorrelatorTest/: OpenCLCorrelatorTest.cc
test/SimpleExample/: SimpleExample.cu
util/: ExceptionPropagator.h  cu.cc  cu.h  multi_array.h  nvrtc.cc  nvrtc.h
